header navigation mobile view fixes 1. Second level navigation not visible in iphone - fixed 2. In desktop view dropdown menu overlap with logo. Moved the dropdown a bit to avoid the overlapping with logo.

--- a/missingkids/less/header.less
+++ b/missingkids/less/header.less
@@ -155,7 +155,6 @@
             height:30px;
             position:absolute;
             z-index:99;
-            overflow-x: scroll;
             width: 100%;
             margin: 0;
             transition: all 0.2s ease-in;
@@ -176,10 +175,17 @@
                 display: none;
               }
             }
+            &.navbar-collapse.in{
+              overflow-y: visible;
+            }
             > ul {
                 white-space: nowrap;
                 padding:0;
                 margin:0;
+                overflow-x: auto;
+                @media(min-width: @screen-sm){
+                  overflow-x: initial;
+                }
                 >li {
                     display:inline-block;
                     padding:8px;
@@ -241,9 +247,9 @@
                           }
                           &:last-child {
                             > ul {
-                              transform: translateX(-50%);
+                              transform: translateX(-45%);
                               &:after{
-                                transform: translateX(-50%);
+                                transform: translateX(-45%);
                               }
                             }
                           }
@@ -252,10 +258,10 @@
                           &:not(:first-child) {
                             > ul {
                               left: 50%;
-                              transform: translateX(-50%);
+                              transform: translateX(-45%);
                               &:after{
                                 left: 50%;
-                                transform: translateX(-50%);
+                                transform: translateX(-45%);
                               }
                             }
                           }
@@ -299,7 +305,7 @@
                           display: block;
                           @media(max-width: @screen-sm){
                             position: fixed;
-                            top: 94px;
+                            top: 93px;
                             width: 100%;
                             max-height: ~"calc(100vh - 73px)";
                             overflow: scroll;
